--- a/web/index.html
+++ b/web/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="zh-cmn-Hans">
 <head>
-  <base href="/buyu">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
 
+  <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="my_app">
+  <meta name="apple-mobile-web-app-title" content="buyu">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>my_app</title>
+  <title>buyu</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
