--- a/web/index.html
+++ b/web/index.html
@@ -10,7 +10,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="buyu">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <link rel="apple-touch-icon" href="buyu/icons/Icon-192.png">
 
   <title>buyu</title>
   <link rel="manifest" href="buyu/manifest.json">
