--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,8 @@
 <html lang="zh-cmn-Hans">
 <head>
 
+  <base href="/buyu/">
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
