--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="不语">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -12,7 +12,7 @@
   <meta name="apple-mobile-web-app-title" content="buyu">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>buyu</title>
+  <title>不语</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
